@@ -33,6 +33,246 @@
 #include "avarice.h"
 #include "jtag.h"
 
+jtag_device_def_type *global_p_device_def;
+
+// Name of device controlled by JTAG ICE
+char* device_name;
+
+/* Device descriptor magic from Atmel's documents. Let's hope it's more
+   accurate than the rest of that text... */
+jtag_device_def_type deviceDefinitions[] = {
+    {
+        "atmega16",
+        0x9403,
+        128, 128,    // 16K flash 
+        4,   128,    // 512 bytes EEPROM
+        {
+            JTAG_C_SET_DEVICE_DESCRIPTOR,
+            0xCF, 0xAF, 0xFF, 0xFF, 0xFE, 0xFF, 0xFF, 0xFF,
+            0x87, 0x26, 0xFF, 0xEF, 0xFE, 0xFF, 0x3F, 0xFA,
+            0x00, 0x00, 0x00, 0x00, 0x00, 0x2F, 0x00, 0x00,
+            0x00, 0x00, 0x00, 0x00, 0x00, 0x2F, 0x00, 0x00,
+            0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,
+            0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,
+            0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,
+            0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,
+            0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,
+            0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,
+            0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,
+            0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,
+            0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,
+            0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 
+            0x31, 0x57, 0x00,  128,    0,    0, 0x80, 0x1F,
+            0x00, 0x00, 0,
+            JTAG_EOM
+        }
+    },
+    // DEV_ATMEGA_162
+    {
+        "atmega162",
+        0x9404,
+        128, 128,    // 16K flash 
+        4,   128,    // 512 bytes EEPROM
+        {
+            JTAG_C_SET_DEVICE_DESCRIPTOR,
+            0xF7, 0x6F, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF,
+            0xF3, 0x66, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFA, 
+            0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 
+            0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 
+            0x02, 0x18, 0x00, 0x30, 0xF3, 0x0F, 0x00, 0x00,
+            0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 
+            0x00, 0x00, 0x00, 0x00, 0x02, 0x18, 0x00, 0x20,
+            0xF3, 0x0F, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,
+            0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,
+            0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,
+            0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 
+            0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,
+            0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,
+            0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 
+            0x04, 0x57, 0x00,  128,    0,    4, 0x80, 0x1F,
+            0x00, 0x00, 0x8B,
+            JTAG_EOM
+        }
+    },
+    // DEV_ATMEGA_169
+    {
+        "atmega169",
+        0x9405,
+        128, 128,    // 16K flash 
+        4,   128,    // 512 bytes EEPROM
+        {
+            JTAG_C_SET_DEVICE_DESCRIPTOR,
+            0xFF, 0xFF, 0xFF, 0xF0, 0xDF, 0x3C, 0xBB, 0xE0, 
+            0xB6, 0x6D, 0x1B, 0xE0, 0xDF, 0x3C, 0xBA, 0xE0, 
+            0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 
+            0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,
+            0x43, 0xDA, 0x00, 0xFF, 0xF7, 0x0F, 0x00, 0x00,
+            0x00, 0x00, 0x4D, 0x07, 0x37, 0x00, 0x00, 0x00, 
+            0xF0, 0xF0, 0xDE, 0x7B, 0x43, 0xDA, 0x00, 0xFF,
+            0xF7, 0x0F, 0x00, 0x00, 0x00, 0x00, 0x4D, 0x05,
+            0x36, 0x00, 0x00, 0x00, 0xE0, 0xF0, 0xDE, 0x7B,
+            0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,
+            0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 
+            0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,
+            0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,
+            0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 
+            0x31, 0x57, 0x00,  128,    0,    4, 0x80, 0x1F,
+            0x00, 0x00, 0xFE,
+            JTAG_EOM
+        }
+    },
+    // DEV_ATMEGA_323
+    {
+        "atmega323",
+        0x9501,
+        128, 256,    // 32K flash 
+        4,   256,    // 1K EEPROM
+        {
+            JTAG_C_SET_DEVICE_DESCRIPTOR,
+            0xCF, 0xAF, 0xFF, 0xFF, 0xFE, 0xFF, 0xFF, 0xFF, 
+            0x87, 0x26, 0xFF, 0xEF, 0xFE, 0xFF, 0x3F, 0xFA, 
+            0x00, 0x00, 0x00, 0x00, 0x00, 0x2F, 0x00, 0x00, 
+            0x00, 0x00, 0x00, 0x00, 0x00, 0x2F, 0x00, 0x00, 
+            0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,
+            0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 
+            0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,
+            0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,
+            0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,
+            0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,
+            0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 
+            0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,
+            0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,
+            0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 
+            0x31, 0x57, 0x00,  128,    0,    0, 0x00, 0x3F,
+            0x00, 0x00, 0,
+            JTAG_EOM
+        }
+    },
+    // DEV_ATMEGA_32
+    {
+        "atmega32",
+        0x9502,
+        128, 256,    // 32K flash 
+        4,   256,    // 1K EEPROM
+        {
+            JTAG_C_SET_DEVICE_DESCRIPTOR,
+            0xFF, 0x6F, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 
+            0xFF, 0x66, 0xFF, 0xFF, 0xFF, 0xFF, 0xBF, 0xFA, 
+            0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 
+            0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 
+            0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,
+            0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 
+            0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,
+            0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,
+            0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,
+            0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,
+            0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 
+            0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,
+            0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,
+            0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 
+            0x31, 0x57, 0x00,  128,    0,    4, 0x00, 0x3F,
+            0x00, 0x00, 0,
+            JTAG_EOM
+        }
+    },
+#if 0
+    /* TRoth 2003-03-25: the values in the dev_desc array where just copied
+       from the mega32. */
+
+    // DEV_ATMEGA_64
+    {
+        "atmega64",
+        0x9602,
+        256, 256,    // 32K flash 
+        8,   256,    // 2K EEPROM
+        {
+            JTAG_C_SET_DEVICE_DESCRIPTOR,
+            0xFF, 0x6F, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 
+            0xFF, 0x66, 0xFF, 0xFF, 0xFF, 0xFF, 0xBF, 0xFA, 
+            0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 
+            0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 
+            0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,
+            0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 
+            0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,
+            0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,
+            0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,
+            0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,
+            0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 
+            0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,
+            0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,
+            0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 
+            0x31, 0x57, 0x00,  128,    0,    4, 0x00, 0x3F,
+            0x00, 0x00, 0,
+            JTAG_EOM
+        }
+    },
+#endif
+    // DEV_ATMEGA_128
+    {
+        "atmega128",
+        0x9702,
+        128, 128,    // 16K flash 
+        4,   128,    // 512 bytes EEPROM
+        {
+            JTAG_C_SET_DEVICE_DESCRIPTOR,
+            0xCF, 0x2F, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 
+            0xCF, 0x27, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFE, 
+            0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 
+            0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 
+            0x3E, 0xB5, 0x1F, 0x37, 0xFF, 0x1F, 0x21, 0x2F,
+            0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 
+            0x00, 0x00, 0x00, 0x00, 0x3E, 0xB5, 0x0F, 0x27,
+            0xFF, 0x1F, 0x21, 0x27, 0x00, 0x00, 0x00, 0x00,
+            0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,
+            0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,
+            0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 
+            0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,
+            0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,
+            0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 
+            0x22, 0x68, 0x3B,    0,    1,    8, 0x00, 0xFE,
+            0x00, 0x00, 0x9D,
+            JTAG_EOM
+        }
+    },
+#if 0
+    // DEV_UNKNOWN - what avarice came with (looks like a garbled 128)
+    {
+        "unknown",
+        0x0,
+        256, 512,    // 128K flash 
+        8,   512,    // 4K EEPROM
+        {
+            JTAG_C_SET_DEVICE_DESCRIPTOR,
+            0xCF, 0x27, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF,
+            0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,
+            0xCF, 0x27, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFE,
+            0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,
+            0x3E, 0xB5, 0x1F, 0x37, 0xFF, 0x1F, 0x21, 0x3F,
+            0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,
+            0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,
+            0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,
+            0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,
+            0x3E, 0xB5, 0x1F, 0x37, 0xFF, 0x1F, 0x21, 0x3F,
+            0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,
+            0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,
+            0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,
+            0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 
+            0x22, 0x68, 0x3B,    0,    1,    8, 0x00, 0xFE,
+            0x00, 0x00, 0x9D,
+            JTAG_EOM
+        }
+    },
+#endif
+    // Termination record.
+    { 
+        NULL,
+        0,
+        0, 0,
+        0, 0,
+        { 0 }
+    }
+};
+
 // The file descriptor used while talking to the JTAG ICE
 int jtagBox = 0;
 
@@ -306,123 +546,13 @@ static void changeBitRate(uchar newBitRate)
     changeLocalBitRate(newBitRate);
 }
 
-/* Device descriptor magic from Atmel's documents. Let's hope it's more
-   accurate than the rest of that text... */
-static uchar deviceDescriptors[][126] = {
-    // DEV_ATMEGA_16
-    {
-	JTAG_C_SET_DEVICE_DESCRIPTOR,
-	0xCF,0xAF,0xFF,0xFF,0xFE,0xFF,0xFF,0xFF,
-	0x87,0x26,0xFF,0xEF,0xFE,0xFF,0x3F,0xFA,
-	0x00,0x00,0x00,0x00,0x00,0x2F,0x00,0x00,
-	0x00,0x00,0x00,0x00,0x00,0x2F,0x00,0x00,
-	0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,
-	0x00,0x00,0x00,0x00, 0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,
-	0x00,0x00,0x00,0x00, 0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,
-	0x00,0x00,0x00,0x00, 0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00, 
-	0x00,0x00,0x00,0x00, 
-	0x31, 0x57, 0x00, 128, 0, 0, 0x80, 0x1F, 0x00, 0x00, 0,
-	JTAG_EOM
-    },
-    // DEV_ATMEGA_162
-    {
-	JTAG_C_SET_DEVICE_DESCRIPTOR,
-	0xF7,0x6F,0xFF,0xFF,0xFF,0xFF,0xFF,0xFF,
-	0xF3,0x66,0xFF,0xFF,0xFF,0xFF,0xFF,0xFA, 
-	0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00, 
-	0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00, 
-	0x02,0x18,0x00,0x30,0xF3,0x0F,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00, 
-	0x00,0x00,0x00,0x00, 0x02,0x18,0x00,0x20,0xF3,0x0F,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00, 
-	0x00,0x00,0x00,0x00, 0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00, 
-	0x00,0x00,0x00,0x00, 0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00, 
-	0x00,0x00,0x00,0x00, 
-	0x04, 0x57, 0x00, 128, 0, 4, 0x80, 0x1F, 0x00, 0x00, 0x8B,
-	JTAG_EOM
-    },
-    // DEV_ATMEGA_169
-    {
-	JTAG_C_SET_DEVICE_DESCRIPTOR,
-	0xFF,0xFF,0xFF,0xF0,0xDF,0x3C,0xBB,0xE0, 
-	0xB6,0x6D,0x1B,0xE0,0xDF,0x3C,0xBA,0xE0, 
-	0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00, 
-	0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00, 
-	0x43,0xDA,0x00,0xFF,0xF7,0x0F,0x00,0x00,0x00,0x00,0x4D,0x07,0x37,0x00,0x00,0x00, 
-	0xF0,0xF0,0xDE,0x7B, 0x43,0xDA,0x00,0xFF,0xF7,0x0F,0x00,0x00,0x00,0x00,0x4D,0x05,0x36,0x00,0x00,0x00, 
-	0xE0,0xF0,0xDE,0x7B, 0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00, 
-	0x00,0x00,0x00,0x00, 0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00, 
-	0x00,0x00,0x00,0x00, 
-	0x31, 0x57, 0x00, 128, 0, 4, 0x80, 0x1F, 0x00, 0x00, 0xFE,
-	JTAG_EOM
-    },
-    // DEV_ATMEGA_323
-    {
-	JTAG_C_SET_DEVICE_DESCRIPTOR,
-	0xCF,0xAF,0xFF,0xFF,0xFE,0xFF,0xFF,0xFF, 
-	0x87,0x26,0xFF,0xEF,0xFE,0xFF,0x3F,0xFA, 
-	0x00,0x00,0x00,0x00,0x00,0x2F,0x00,0x00, 
-	0x00,0x00,0x00,0x00,0x00,0x2F,0x00,0x00, 
-	0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00, 
-	0x00,0x00,0x00,0x00, 0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00, 
-	0x00,0x00,0x00,0x00, 0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00, 
-	0x00,0x00,0x00,0x00, 0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00, 
-	0x00,0x00,0x00,0x00, 
-	0x31, 0x57, 0x00, 128, 0, 0, 0x00, 0x3F, 0x00, 0x00, 0,
-	JTAG_EOM
-    },
-    // DEV_ATMEGA_32
-    {
-	JTAG_C_SET_DEVICE_DESCRIPTOR,
-	0xFF,0x6F,0xFF,0xFF,0xFF,0xFF,0xFF,0xFF, 
-	0xFF,0x66,0xFF,0xFF,0xFF,0xFF,0xBF,0xFA, 
-	0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00, 
-	0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00, 
-	0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00, 
-	0x00,0x00,0x00,0x00, 0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00, 
-	0x00,0x00,0x00,0x00, 0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00, 
-	0x00,0x00,0x00,0x00, 0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00, 
-	0x00,0x00,0x00,0x00, 
-	0x31, 0x57, 0x00, 128, 0, 4, 0x00, 0x3F, 0x00, 0x00, 0,
-	JTAG_EOM
-    },
-    // DEV_ATMEGA_128
-    {
-	JTAG_C_SET_DEVICE_DESCRIPTOR,
-	0xCF,0x2F,0xFF,0xFF,0xFF,0xFF,0xFF,0xFF, 
-	0xCF,0x27,0xFF,0xFF,0xFF,0xFF,0xFF,0xFE, 
-	0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00, 
-	0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00, 
-	0x3E,0xB5,0x1F,0x37,0xFF,0x1F,0x21,0x2F,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00, 
-	0x00,0x00,0x00,0x00, 0x3E,0xB5,0x0F,0x27,0xFF,0x1F,0x21,0x27,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00, 
-	0x00,0x00,0x00,0x00, 0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00, 
-	0x00,0x00,0x00,0x00, 0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00, 
-	0x00,0x00,0x00,0x00, 
-	0x22, 0x68, 0x3B, 0, 1, 8, 0x00, 0xFE, 0x00, 0x00, 0x9D,
-	JTAG_EOM
-    },
-    // DEV_UNKNOWN - what avarice came with (looks like a garbled 128)
-    {
-	JTAG_C_SET_DEVICE_DESCRIPTOR,
-	0xCF,0x27,0xFF,0xFF,0xFF,0xFF,0xFF,0xFF,
-	0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,
-	0xCF,0x27,0xFF,0xFF,0xFF,0xFF,0xFF,0xFE,
-	0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,
-	0x3E,0xB5,0x1F,0x37,0xFF,0x1F,0x21,0x3F,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,
-	0x00,0x00,0x00,0x00, 0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,
-	0x00,0x00,0x00,0x00, 0x3E,0xB5,0x1F,0x37,0xFF,0x1F,0x21,0x3F,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,
-	0x00,0x00,0x00,0x00, 0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,
-	0x00,0x00,0x00,0x00, 
-	0x22, 0x68, 0x3B, 0, 1, 8, 0x00, 0xFE, 0x00, 0x00, 0x9D,
-	JTAG_EOM
-    }	
-};
-
 /** Set the JTAG ICE device descriptor data for specified device type **/
-static void setDeviceDescriptor(deviceType dev)
+static void setDeviceDescriptor(jtag_device_def_type *dev)
 {
     uchar *response = NULL;
-    uchar *command = deviceDescriptors[dev];
+    uchar *command = dev->dev_desc;
 
-    response = doJtagCommand(command, sizeof deviceDescriptors[dev], 1);
+    response = doJtagCommand(command, sizeof dev->dev_desc, 1);
     check(response[0] == JTAG_R_OK,
 	      "JTAG ICE: Failed to set device description");
 
@@ -486,18 +616,109 @@ static void startJtagLink(void)
     check(false, "Failed to synchronise with the JTAG ICE (is it connected and powered?)");
 }
 
+/** Device automatic configuration 
+ Determines the device being controlled by the JTAG ICE and configures
+ the system accordingly.
+
+ May be overridden by command line parameter.
+
+*/
+static void deviceAutoConfig(void)
+{
+    unsigned int device_id;
+    int i;
+    jtag_device_def_type *pDevice = deviceDefinitions;
+
+    // Auto config
+    debugOut("Automatic device detection: ");
+   
+    /* Read in the JTAG device ID to determine device */
+    device_id = getJtagParameter(JTAG_P_JTAGID_BYTE0) +
+        (getJtagParameter(JTAG_P_JTAGID_BYTE1) <<  8) +
+        (getJtagParameter(JTAG_P_JTAGID_BYTE2) << 16) + 
+        (getJtagParameter(JTAG_P_JTAGID_BYTE3) << 24);
+   
+    debugOut("JTAG id = 0x%0X : Ver = 0x%0x : Device = 0x%0x : Manuf = 0x%0x\n", 
+             device_id,
+             (device_id & 0xF0000000) >> 28,
+             (device_id & 0x0FFFF000) >> 12,
+             (device_id & 0x00000FFE) >> 1);
+   
+    device_id = (device_id & 0x0FFFF000) >> 12;
+    statusOut("Reported JTAG device ID: 0x%0X\n", device_id);
+    
+    if (device_name == 0)
+    {
+        while (pDevice->name)
+        {
+            if (pDevice->device_id == device_id)
+                break;
+
+            pDevice++;
+        }
+        check(pDevice->name,
+              "No configuration available for device ID: %0x\n",
+              device_id); 
+    }
+    else
+    {
+        debugOut("Looking for device: %s\n", device_name);
+
+        while (pDevice->name)
+        {
+            if (strcasecmp(pDevice->name, device_name) == 0)
+                break;
+
+            pDevice++;
+        }
+        check(pDevice->name,
+              "No configuration available for Device: %s\n",
+              device_name);
+    }
+
+    if (device_name)
+    {
+        if (device_id != pDevice->device_id)
+        {
+            statusOut("Configured for device ID: 0x%0X %s -- FORCED with %s\n",
+                      pDevice->device_id, pDevice->name, device_name);
+        }
+        else
+        {
+            statusOut("Configured for device ID: 0x%0X %s -- Matched with "
+                      "%s\n", pDevice->device_id, pDevice->name, device_name);
+        }
+    }
+    else
+    {
+        statusOut("Configured for device ID: 0x%0X %s\n",
+                  pDevice->device_id, pDevice->name);
+    }
+
+    device_name = (char*)pDevice->name;
+
+    global_p_device_def = pDevice;
+
+    setDeviceDescriptor(pDevice);
+}
+
 void initJtagBox(bool attach)
 {
     statusOut("JTAG config starting.\n");
 
     startJtagLink();
     changeBitRate(BIT_RATE_115200);
-    check(getJtagParameter(JTAG_P_HW_VERSION) == 0xc0,
-	  "JTAG ICE: Unknown hardware version");
-    debugOut("Software version %02x\n", getJtagParameter(JTAG_P_SW_VERSION));
+
+    uchar hw_ver = getJtagParameter(JTAG_P_HW_VERSION);
+    statusOut("Hardware Version: 0x%02x\n", hw_ver);
+    check(hw_ver == 0xc0, "JTAG ICE: Unknown hardware version");
+
+    uchar sw_ver = getJtagParameter(JTAG_P_SW_VERSION);
+    statusOut("Software Version: 0x%02x\n", sw_ver);
+
     interruptProgram();
 
-    setDeviceDescriptor(DEV_ATMEGA_128);
+    deviceAutoConfig();
 
     if (!attach)
     {
